css/index.css
/* resets */
* {
  box-sizing: border-box;
}
html {
  overflow-x: hidden;
}
html,
body {
  background-color: rgb(255, 254, 248);
  background-image: url("../images/crossword.png");
  height: 100%;
  
}

body {
  position: relative; 
  /* overflow: auto !important; */
}

h1,
h2,
h3,
h4,
h5 {
  font-family: 'Rosario', sans-serif;
  color: #1B242F;
  font-weight: 700;
  letter-spacing: 1px;
}

p{
  color:  #1B242F;
  font-family: 'Setimo','Open Sans', sans-serif;
  font-size: 18px;
  font-weight: 300;
  letter-spacing: .5px;
  line-height: 30px;
}


/* globals */
.uppercase {
  text-transform: uppercase;
}

.hidden {
  visibility: hidden;
}

.web-links{
  color: rgb(245, 20, 114);
  font-weight: 500;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out ;
}

.web-links:hover{
  color: #00A1A7;
  text-decoration: none;
}

/* May need to button tags to a tags so that we can use href attribute */
.btn-group {
  color: white;
}

/* May need to change button so we can have background shift colors on hover */
.btn {
  background: #E31B6D;
  background-image: linear-gradient(to bottom, #96013e, #a40546, #b20a4e, #c00f57, #cf1460, #cf1460, #cf1460, #cf1460, #c00f57, #b20a4e, #a40546, #96013e);
  border: 1px solid #570124;
  color: white;
  cursor: pointer;
  margin: 40px 30px;
  padding: 10px;
  text-transform: uppercase;
  width: 100px;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out ;

}

.button-container{
  color:white;
  
}

.button-container:hover{
  color: #570124
}

.section-title {
  background: #00A1A7;
  background-image: url("../images/dark_leaf_bkgd.png"), linear-gradient(to right, #00a1a7, #01a7ad, #01adb3, #02b4ba, #03bac0, #03bac0, #03bac0, #03bac0, #02b4ba, #01adb3, #01a7ad, #00a1a7);
  margin: 0 0 80px;
  padding: 30px 0;
  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.61);
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.61);
          box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.61);
}

/* Change Cards to glassy texture? Less box-shadow? */
.card {
  background-color: rgb(246, 246, 246);
  -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.47);
     -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.47);
          box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.47);
}

.card-title{
  color:#1B242F;
  border-bottom: rgba(0, 161, 167, 0.185) 1px solid;
  padding-bottom: 30px;
}


.section-margin{
  margin: 80px auto 130px;
}

.no-pad{
  padding: 0px;
}

/* Navigation */

header {
  margin-bottom: 80px;
}

nav {
  /* Navy: #1B242F Teals: 2793a1 #04C2C9, darkteal:#00A1A7,  Pinks:#FF1A73 */
  background: #1B242F;
  background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom,  #1b242f, #182632, #132834);
  border-bottom: 1.5px solid #E31B6D ;
  font-size: 18px;
  -webkit-box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);
     -moz-box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);
          box-shadow: 0px 4px 12px 1px rgba(0,0,0,0.65);

}

.navbar-toggler{
  border-color: #E31B6D;
  margin: 10px 0;
  transition: all 0.5s ease-in-out ;
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(227,27,109, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='15' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
  transition: all 0.5s ease-in-out ;
}

.navbar-toggler:hover{
  border-color: white;
}

.navbar-toggler-icon:hover{
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='15' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

 nav .nav-item {
   margin: 2% 9%;
  transition: all 0.5s ease-in-out ;
} 

.nav-link{
  color:white;
  transition: all 0.5s ease-in-out ;
  padding: 10px 20px;
}

.nav-item:active{
  color: #E31B6D;
}

/* #1B242F */
.nav-link:hover{
  color: #E31B6D;
  /* background: #03202770; */
}

.active a {
  color: #E31B6D;
} 



/* Jumbotron   Dark Teal:#023E4D*/
.jumbotron {
  background: #1B242F;
  background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom,  #1b242f, #182632, #132834, #0d2b36, #052d37);
  color: white;
  margin-bottom: 0px;
  height: 95vh;
}

.jumbotron-img {
  margin: 20px;
}

.headshot {
  border: 3px solid #E31B6D;
  width: 225px;
}

.header-info h1 {
  color: #E31B6D;
  font-family: 'Setimo','Open Sans', sans-serif;
  font-size:70px;
  font-weight: 400;
  margin: 10px 0 5px;
}

.header-info span {
  color: white;
  font-size:45px;
}

.header-info h4 {
  color: white;
  /* font-size: 30px; */
  font-weight: 400;
  line-height: 36px;
  margin: 20px 0;
}

/* Skills */


/* Portfolio */

.port {
  margin: 10px 0px 20px;
}

/*Pink Colors #cf1460, #c00f57, #b20a4e, #a40546, #96013e */
/*Teal Colors #00a1a7, #01a7ad, #01adb3, #02b4ba, #03bac0  */
.hovereffect {
  background-color: #cf1460;
  width: 100%;
  height: 100%;
  float: left;
  letter-spacing: 2px;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
}

/* Overlay */
.hovereffect .overlay {
  background: rgba(0, 0, 0, 0.6); 
  position: absolute;
  border: 1px solid #00a1a7;
  overflow: hidden;
  width: 80%;
  height: 80%;
  left: 10%;
  top: 10%;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
          transition: opacity 0.35s, transform 0.35s;
  -webkit-transform: scale(0,1);
      -ms-transform: scale(0,1);
          transform: scale(0,1);
}

.hovereffect:hover .overlay {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
}

/* card image */
.hovereffect img {
  display: block;
  position: relative;
  -webkit-transition: all 0.35s;
          transition: all 0.35s;
}

.hovereffect:hover img {
  opacity: 0.2;
  filter: alpha(opacity=20);
  -webkit-transform: translate3d(0,0,0);
          transform: translate3d(0,0,0);
}

.hovereffect h4 {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-family: 'Setimo','Open Sans', sans-serif;
  font-size: 18px;
  font-weight: 400;
  background-color: transparent;
  color: #FFF;
  padding: 30px 0 0px;
}

.hovereffect h6 {
  /* text-transform: uppercase; */
  text-align: center;
  position: relative;
  font-family: 'Setimo','Open Sans', sans-serif;
  font-size: 14px;
  font-weight: 300;
  background-color: transparent;
  color: #FFF;
}

.hovereffect button {
  background: rgba(0, 0, 0, 0.6); 
  border:0.1px solid  #55f9ff88;
  font-size: 14px;
  padding: 5px 15px;
  color: #FFF;
  margin-top: 15px;
  opacity: 0;
  filter: alpha(opacity=0);
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s, all 0.3s ease-in-out ;
          transition: opacity 0.35s, transform 0.35s, all 0.3s ease-in-out ;
  -webkit-transform: translate3d(0,100%,0);
          transform: translate3d(0,100%,0);
}
/* May get rid of box shadow. Simplify? */
.hovereffect button:hover {
  border: 0.1px solid  #b8fdff;
  color: #02f7ff;
  -webkit-box-shadow: 0px 0px 7px  #affcff;
     -moz-box-shadow: 0px 0px 7px  #affcff;
          box-shadow: 0px 0px 7px  #affcff;
  transition: all 0.3s ease-in-out ;
  
}

.hovereffect button:focus {
  outline: none;
}

.hovereffect:hover button, .hovereffect:hover h4, .hovereffect:hover h6 {
  
  opacity: 1;
  filter: alpha(opacity=100);
  text-decoration: none;
  -webkit-transform: translate3d(0,0,0);
          transform: translate3d(0,0,0);
}


/* Modal Styles */
.modal{ 
  overflow: hidden; 
}
.modal-header{
  border-bottom: 1px solid rgba(0, 161, 167, 0.281);
}

.modal-body{
  background: #1B242F;
  background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom,  #1b242f, #182632, #132834, #0d2b36, #052d37);
  overflow-x: hidden;
  padding: 0 16px;
}
.modal-rel{
  position: absolute; 
  bottom: 0; 
  right:0; 
  left: auto; 
  top: auto; 
  bottom: 0; 
    
}
.modal-container {
  margin: 0;
  padding: 0;
}

.text {
  background-color: white;
}

.text p {
  font-size: 14px;
  line-height: 22px;
}

.list-title {
  font-weight: 600;
  list-style: none;
  text-decoration: underline;
}

.tech-list {
  list-style: outside;
}

.modal-footer {
  border-top: 1px solid rgba(0, 161, 167, 0.281);
}

.modal-btn i {
  background: #E31B6D;
  background-image: radial-gradient( #cf1460, #c00f57, #b20a4e, #a40546);
  border: 1px solid #570124;
  border-radius: 50%;
  color: white;
  font-size: 24px;
  cursor: pointer;
  margin-right: 10px ;
  padding: 15px;
  text-transform: uppercase;
  transition: all 0.3s ease-in-out ;
}

.modal-btn:hover{
  color: #570124;
}

.after_modal_appended {  
  position: relative;
}



/* Experience */
#experience h4{
  color:rgb(1, 140, 145);
}

.timeline::before{
    top: 20%;
    bottom: 0;
    position: absolute;
    content:" ";
    width: 2px;
    height: 70%;
    background: rgba(227, 27, 110, 0.205);
    left: 31%;
    margin-left: 1.5px;
}

.fa-briefcase, .fa-graduation-cap {
  background-color: #E31B6D;
  color: white;
  font-size:22px;
  padding: 20px;
  border-radius: 50%;
  z-index: 999;
}


/* Contact */
#contact {
  background: #1B242F;
  background-image: linear-gradient(to top, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to top,  #1b242f, #182632, #132834, #0d2b36, #052d37);
  padding-bottom: 80px;
}

.contact-margin{
  margin-top:80px;
}

#contact-card {
  background-color: rgb(255, 254, 248);
  background-image: url("../images/crossword.png");
  padding:0;
}

.contact-title{
  color:#1B242F;
  border-bottom: rgba(0, 161, 167, 0.185) 1px solid;
  padding-bottom: 15px;
}

.form-container {
  background: #1B242F;
  background-image: linear-gradient(to top, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to top,  #1b242f, #182632, #132834, #0d2b36, #052d37);
  -webkit-box-shadow: inset 1px 7px 12px 0px rgba(0,0,0,1);
     -moz-box-shadow: inset 1px 7px 12px 0px rgba(0,0,0,1);
          box-shadow: inset 1px 7px 12px 0px rgba(0,0,0,1);
  margin: 20px;
  padding:20px ;
}
.inner-form {
  margin: 20px 0 0px;
  ;
}

.form-row {
  color:white;
  margin: 0 10%;
}

.bottom-margin {
  margin-bottom: 30px;
}

.form-group label {
  font-size: 16px;
  text-transform: uppercase;
  padding-bottom: 2px;
}

.form-group input,.form-group textarea {
  border-radius: 0;
  border: 2px white solid;
  -webkit-box-shadow: inset 2px 6px 12px -6px #0a0a0a;
     -moz-box-shadow: inset 2px 6px 12px -6px #0a0a0a;
          box-shadow: inset 2px 6px 12px -6px #0a0a0a;
}


/* Footer */
footer {
  background: #1B242F;
  background-image: linear-gradient(to top, #1b242f, #182632, #132834, #0d2b36, #052d37);
  background-image: url("../images/leaf_overlay.png"), linear-gradient(to top,  #1b242f, #182632, #132834, #0d2b36, #052d37);
  border-top: 1.5px solid #E31B6D;
  -webkit-box-shadow: 0px -4px 10px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px -4px 10px 1px rgba(0,0,0,0.75);
          box-shadow: 0px -4px 10px 1px rgba(0,0,0,0.75);
  padding: 20px 0 ;
  margin: 0px;
}
footer p{
  color: white;
}

.social-icons a {
  color: white;
  margin-left: 15%;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out ;

}

.social-icons a:hover {
  color: #E31B6D;
}

